// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Centered Between Sidebars [Custom Weights] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 2,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "height": 1334,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 2,
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "height": 1334,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 2,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "height": 1334,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Centered Between Sidebars [Default] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "height": 1334,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 4,
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "height": 1334,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "height": 1334,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
